<resources>
    <string name="app_name">Магазин парфюмерии</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Войти</string>
    <string name="e_mail">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_now">Зарегистрироваться сейчас</string>
    <string name="login_now">Войти сейчас</string>
    <string name="logout">Выйти</string>
    <string name="home">Главная</string>
    <string name="about_app">О программе</string>
    <string name="about_author">Об авторе</string>
    <string name="shop">Магазин</string>
    <string name="status">Статус:</string>
    <string name="monitoring_here">Мониторинг здесь</string>
    <string name="cart">Корзина</string>
    <string name="timestamp">Временная метка</string>
    <string name="level">Уровень</string>
    <string name="message">Сообщение</string>
    <string name="server_id">Идентификатор сервера</string>
    <string name="email_label">Электронная почта: %1$s</string>
    <string name="no_data_available">Нет доступных данных</string>
    <string name="timestamp_hint">Введите временную метку (дата/время)</string>
    <string name="message_hint">Введите сообщение</string>
    <string name="server_id_hint">Введите идентификатор сервера</string>
    <string name="select_timestamp">Выбрать временную метку (дата/время)</string>
    <string name="todo">TODO</string>
    <string name="change_email">Изменить электронную почту</string>
    <string name="tip">Совет:\n Перейдите в раздел "Логи", чтобы просмотреть и создать их\n Перейдите в раздел "Мониторинг", чтобы просмотреть текущее состояние сервера</string>
    <string name="total_disk_space">Общий объем дискового пространства:</string>
    <string name="occupied_disk_space">Занято дискового пространства:</string>
    <string name="free_disk_space_percentage">Процент свободного дискового пространства:</string>
    <string name="cpu_load">Нагрузка на ЦП:</string>
    <string name="ram_usage">Использование ОЗУ:</string>
    <string name="uptime">Время работы:</string>
    <string name="logged_in_users">Авторизованные пользователи:</string>
    <string name="manual">Инструкция</string>

    <string name="size_format">%d ml</string>
    <string name="price_format">$%.2f</string>
    <string name="add_remove">Добавить/Убрать</string>


    <string-array name="log_levels">
        <item>ОШИБКА</item>
        <item>ПРЕДУПРЕЖДЕНИЕ</item>
        <item>ИНФОРМАЦИЯ</item>
    </string-array>

</resources>